<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        app:cardBackgroundColor="?attr/colorSecondaryContainer"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorOutlineVariant"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ibEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibDelete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete_on_surface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnSecondaryContainer" />

            <ImageButton
                android:id="@+id/ibEdit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_list"
                app:layout_constraintBottom_toBottomOf="@+id/ibDelete"
                app:layout_constraintEnd_toStartOf="@+id/ibDelete"
                app:layout_constraintTop_toTopOf="@+id/ibDelete"
                app:tint="?attr/colorOnSecondaryContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>