<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="3dp"
        app:cardBackgroundColor="?attr/colorSecondaryContainer"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorOutlineVariant"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvListName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/textview"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/btnDeleteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:contentDescription="@string/delete"
        android:elevation="10dp"
        android:src="@drawable/ic_delete_surface"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:tint="?attr/colorOnSecondaryContainer" />

    <ImageButton
        android:id="@+id/btnEditList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:contentDescription="@string/edit"
        android:elevation="10dp"
        android:src="@drawable/ic_edit_list"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteList"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:tint="?attr/colorOnSecondaryContainer" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/counterCard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:alpha="0.9"
        android:elevation="10dp"
        app:cardBackgroundColor="?attr/colorSecondaryContainer"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnEditList"
        app:layout_constraintEnd_toStartOf="@+id/btnEditList"
        app:layout_constraintTop_toTopOf="@+id/btnEditList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/_0_0"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>